k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walkme-backend
  namespace: walkme
spec:
  replicas: 2
  selector:
    matchLabels:
      app: walkme-backend
  template:
    metadata:
      labels:
        app: walkme-backend
    spec:
      containers:
        - name: walkme-backend
          image: harshjswl/walkme-backend:1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
